--- a/src/index.css
+++ b/src/index.css
@@ -19,56 +19,10 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-image: url('./assets/background-img.jpg');
+  background-size: cover; /* Cover the entire container */
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-attachment: fixed; /* Keep the background image fixed while scrolling */
 }
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  margin: 10px;
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  color: rgba(255, 255, 255, 0.87);
-  transition: border-color 0.25s;
-  cursor: pointer;
-}
-
-button:hover {
-  border-color: #646cff;
-}
-
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-.container {
-  margin-top: 20px;
-  display: flex;
-}
-
-
-.upgrade {
-  border: 1px solid rgba (153, 153, 153, 0.8);
-  padding-top: 20px;
-  padding-left: 10px;
-  padding-right: 10px;
-  margin-right: 25px;
-  width: 200px;
-  line-height: 0.5;
-  width: 200px;
-  background-color: rgba(0, 0, 0, 0.1); 
-  border-radius: 15px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
-  margin: 20px;
-}
-
 
