--- a/src/App.css
+++ b/src/App.css
@@ -13,27 +13,15 @@
   height: 300px;
   position: relative;
   padding: 10px;
-  transition: filter 300ms;
-  margin: 0 auto;
-  background-color: rgba(250, 250, 250, 0.1); 
   border-radius: 20px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.8);
-  padding: 20px;
-  margin: 20px;
   perspective: 1000px;
-  margin: 0 auto; /* Centering the card */
-  cursor: pointer
-}
-
-.card-inner {
-  width: 100%;
-  height: 100%;
-
-  position: relative;
-}
-
-.isFlipped {
-  transform: rotateX(180deg);
+  margin: 20px auto; /* Centering the card */
+  cursor: pointer;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.25); /* More pronounced shadow for depth */
+  background-color: #ffffff; /* Light mode adjustment, consider using a variable for theme support */
+  overflow: hidden; /* Ensures no content bleeds outside the card */
 }
 
 .card-face {
@@ -46,15 +34,45 @@
   justify-content: center;
 }
 
+.card-face.isFlipped {
+  backface-visibility: visible;
+}
+.card-face.front {
+  max-width: 400px;
+  max-height: 300px;
+}
+
 .card-face.back {
+  transform: rotateX(180deg); /* Back face is initially flipped to be "invisible" */
+  max-width: 400px;
+  max-height: 300px;
+  border-radius: 10px;
+}
+
+.card-face.back.isFlipped::after {
+  content: "";
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  background: linear-gradient(to bottom, transparent, rgba(0,0,0,0.2)); /* Adjust color/opacity as needed */
+  pointer-events: none; /* Allows clicks to pass through */
+}
+
+.card.isFlipped {
   transform: rotateX(180deg);
+}
+
+.card-face.isFlipped.front {
+  visibility: collapse;
 }
 
 
 .card img {
   max-width:100%;
-  border-radius: 8px;
+  height: auto;
   max-height: 100%;
+  border-radius: 8px;
+  object-fit: contain;
 }
 
 .card h3 {
@@ -63,33 +81,34 @@
   font-weight: bold;
 }
 
-
-
 a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-  background-color: rgba(0, 0, 0, 0.7); 
-  width: min-content;
+  font-family: oswald;
+  background-color: rgba(255, 255, 255, 0.9); 
+  font-size: 100px;
+  font-weight: 500;
+  text-transform: uppercase;
+  line-height: 1;
+  box-shadow: white;
   margin: 0 auto;
-  padding: 20px;
-  color: rgb(197, 168, 3);
+  border-radius: 20px;
 }
 
 h2 {
-  background-color: rgba(0, 0, 0, 0.7); 
+  background-color: rgba(255, 255, 255, 0.9); 
   width: 50%;
   margin: 10px auto;
   padding: 10px;
-   color: rgb(197, 168, 3);
+  font-family: cursive;
 }
 
 .buttons {
