--- a/src/App.css
+++ b/src/App.css
@@ -43,19 +43,21 @@
 }
 
 .card-face.back {
-  transform: rotateX(180deg); /* Back face is initially flipped to be "invisible" */
-  max-width: 400px;
-  max-height: 300px;
-  border-radius: 10px;
+  transform: rotateX(180deg);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .card-face.back.isFlipped::after {
   content: "";
   position: absolute;
   top: 0; left: 0;
-  width: 100%; height: 100%;
+  width: 90%; height: 100%;
   background: linear-gradient(to bottom, transparent, rgba(0,0,0,0.2)); /* Adjust color/opacity as needed */
   pointer-events: none; /* Allows clicks to pass through */
+  margin-left: 10px;
 }
 
 .card.isFlipped {
@@ -76,9 +78,10 @@
 }
 
 .card h3 {
-  margin-top: 20px;
+  margin-top: 0; /* Remove the specific margin-top and position properties */
   font-size: 1.5rem;
   font-weight: bold;
+  display: block;
 }
 
 a {
@@ -101,12 +104,13 @@ h1 {
   box-shadow: white;
   margin: 0 auto;
   border-radius: 20px;
+  margin: 0;
 }
 
 h2 {
   background-color: rgba(255, 255, 255, 0.9); 
   width: 50%;
-  margin: 10px auto;
+  margin: 0 auto;
   padding: 10px;
   font-family: cursive;
 }
